feat: preparing dfs endpoint
